--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   </main>
 
   <section class="" id="Filter">
+    <span id="close">X</span>
     <div>
       <p id="All">Todas</p>
       <p id="Heroes">SUPERHEROES</p>
