Anime records added.
Now you can not only search throught movies, but throught anime too.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="movie-poster" id="movie-poster">
       
     </div>
-    <p class="main-p" >Coming Soon</p>
+    <p class="main-p" id="coming-soonP">Coming Soon</p>
     <div class="coming-poster" id="coming-soon">
       
     </div>
@@ -53,10 +53,10 @@
     <button id="close">X</button>
     <div>
       <p id="All">Todas</p>
-      <p id="Heroes">SUPERHEROES</p>
-      <p id="Action">ACTION</p>
-      <p id="Comedy">COMEDY</p>
-      <p id="Drama">Drama</p>
+      <p id="Anime">Anime</p>
+      <p id="Music">Music</p>
+      <p id="Books">Books</p>
+      <p id="Movies">Movies</p>
     </div>
   </section>
 
