--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="Header-div">
       <p id="date">May 28 10:12am</p>
       <p>Discover all...</p>
-      <div class="icons">🔔✨</div>
+      <a href="https://github.com/CalvinRBobadillaF" class="waterMark">Made by: Calvin Bobadilla 🔔✨</a>
+      <div class="icons"></div>
       <div class="search-bar" id="search-bar">
         <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" viewBox="0 0 24 24">
           <path d="M21.53 20.47l-4.82-4.82A7.94 7.94 0 0018 10a8 8 0 10-8 8 7.94 7.94 0 005.65-2.29l4.82 4.82a.75.75 0 101.06-1.06zM4 10a6 6 0 1112 0 6 6 0 01-12 0z"/>
